--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -46,12 +46,14 @@ main {
     flex: 1;
 
     max-width: calc(700px + 25px + 6px); /* 700px + both paddings */
+    max-width: 66vw;
     padding-top: 0px;
     padding-bottom: 4rem;
-    padding-left: 25px;
+    padding-left: 4vw;
     padding-right: 6px;
     align-content: center;
     width: 100%;
+    font-size: 130%;
 }
 
 body:not(.disable_ui) main {
@@ -1355,14 +1357,16 @@ dropruler {
 }
 pluto-helpbox {
     bottom: 0px;
-    right: 20px;
+    right: 10px;
     position: absolute;
     display: flex;
     flex-direction: column;
     width: calc(100vw - 50px - (700px + 25px + 6px)); /* compat */
-    width: calc(max(min(100vw - 50px - (700px + 25px + 6px), 450px), 300px));
+    /* width: calc(max(min(100vw - 50px - (700px + 25px + 6px), 450px), 300px)); */
+    width: 31vw;
     height: 70vh; /* compat */
-    height: min(70vh, 900px);
+    /* height: min(70vh, 900px); */
+    height: 92vh; 
     /* overflow: hidden; */
     background-color: white;
     /* border: 2px solid darkgray; */
