--- a/frontend/index.css
+++ b/frontend/index.css
@@ -14,7 +14,7 @@
     /* position: absolute; */
     /* left: 0; */
     /* right: 0; */
-    margin-top: 34vh;
+    margin-top: 2vh;
     /* bottom: 0; */
     /* margin: auto; */
     display: block;
@@ -59,9 +59,9 @@ body {
 }
 
 main {
-    width: 15em;
+    width: 40vw;
     margin: 0 auto;
-    margin-top: 20vh;
+    margin-top: 2vh;
     text-align: left;
     font-family: "Roboto Mono", monospace;
     color: hsl(0, 0%, 60%);
@@ -107,7 +107,8 @@ a {
 pluto-filepicker {
     display: flex;
     flex-direction: row;
-    margin-top: 0.3rem;
+    /* margin-top: 0.3rem; */
+    margin-left: 0.6rem;
 }
 
 pluto-filepicker .CodeMirror {
